# SpaceGameCPP

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SpaceGameCPP.sln  SpaceGameCPP.vcxproj  SpaceGameCPP.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
SpaceGameCPP.dir/Debug/: vc143.idb
SpaceGameCPP.dir/Debug/SpaceGameCPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SpaceGameCPP.lastbuildstate
include/: Object.hpp
src/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  PhysicsObject2D.cpp  PhysicsObject2D.h  PhysicsObject2D.hpp  Player.cpp  Player.h  Player.hpp  PlayerShoot.cpp  PlayerShoot.hpp  utils.cpp
src/core/: Object.cpp  ObjectManager.cpp  ObjectManager.hpp
